--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "@emotion/babel-plugin": "^11.9.2",
     "@emotion/react": "^11.9.0",
+    "@mantine/core": "^4.1.4",
+    "@mantine/dropzone": "^4.1.4",
+    "@mantine/hooks": "^4.1.4",
+    "@mantine/next": "^4.1.4",
+    "@mantine/notifications": "^4.1.4",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-query": "^3.37.0",
     "styled-components": "^5.3.5",
+    "tabler-icons-react": "^1.46.0",
     "twin.macro": "^2.8.2"
   },
   "devDependencies": {
